# pydantic-sqlalchemy

./: pyproject.toml
pydantic_sqlalchemy/: main.py
tests/: test_pydantic_sqlalchemy.py
