[tool.poetry]
name = "pydantic-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Peter Nociar <pnociar@gmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
SQLAlchemy = ">1.0.0"
sqlalchemy-utc = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
